[package]
name = "mc-prod-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.8", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "history"] }
either = "1.8.1"
helixlauncher-core = { git="https://github.com/HelixLauncher/HelixLauncher" }
schemars = "0.8.12"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
